# repoams

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/autonomous_exploration/share/autonomous_exploration/: package.sh
install/bno08x_driver/lib/bno08x_driver/: bno08x_driver
install/bno08x_driver/share/bno08x_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bno08x_driver/share/bno08x_driver/cmake/: bno08x_driverConfig-version.cmake  bno08x_driverConfig.cmake
install/bno08x_driver/share/bno08x_driver/config/: bno085_i2c.yaml
install/bno08x_driver/share/bno08x_driver/environment/: ament_prefix_path.dsv  path.dsv
install/bno08x_driver/share/bno08x_driver/launch/: bno085_i2c.launch.py
install/dwb_msgs/share/dwb_msgs/: package.sh
install/explore_lite/share/explore_lite/: local_setup.sh  package.sh
install/fake_rplidar/lib/fake_rplidar/: fake_scan
install/fake_rplidar/share/fake_rplidar/: package.bash  package.dsv  package.ps1  package.sh
install/maze_explorer/share/maze_explorer/: package.bash  package.zsh
install/multirobot_map_merge/share/multirobot_map_merge/: package.sh
install/nav2_common/share/nav2_common/: local_setup.sh  package.sh
install/nav2_msgs/share/nav2_msgs/: package.sh
install/nav2_msgs/share/nav2_msgs/action/: ComputePathThroughPoses.json  FollowObject.json  FollowPath.idl
install/nav2_msgs/share/nav2_msgs/msg/: TrackingFeedback.idl
install/nav2_ros_common/share/nav2_ros_common/: package.bash  package.zsh
install/nav2_simple_commander/share/nav2_simple_commander/: package.sh
install/nav2_voxel_grid/share/nav2_voxel_grid/: local_setup.sh  package.sh
install/nav_2d_msgs/share/nav_2d_msgs/: package.sh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sllidar_ros2/share/sllidar_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  sllidar_ros2Config-version.cmake  sllidar_ros2Config.cmake
install/sllidar_ros2/share/sllidar_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/sllidar_ros2/share/sllidar_ros2/launch/: sllidar_a2m12_launch .py  sllidar_a2m7_launch.py  sllidar_s1_tcp_launch.py  sllidar_s2_launch.py  sllidar_s2e_launch.py  sllidar_t1_launch.py  view_sllidar_a1_launch.py  view_sllidar_a2m12_launch.py  view_sllidar_a3_launch.py  view_sllidar_c1_launch.py  view_sllidar_s1_tcp_launch.py  view_sllidar_s2_launch.py  view_sllidar_s2e_launch.py  view_sllidar_s3_launch.py
log/: latest_build
src/fake_rplidar/: package.xml  setup.cfg  setup.py
src/fake_rplidar/fake_rplidar/: fake_scan.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/bno08x_driver/lib/bno08x_driver/: bno08x_driver
src/install/bno08x_driver/share/bno08x_driver/: local_setup.sh  package.sh
src/install/fake_rplidar/share/fake_rplidar/: package.sh  package.zsh
src/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
src/install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
src/log/: latest_build
src/maze_explorer/: CMakeLists.txt  mecanum_hardware_interface_plugin.xml
src/maze_explorer/config/: controllers.yaml  ekf_params.yaml  explorer_params.yaml  nav2_params.yaml
src/maze_explorer/launch/: complete_system.launch.py  exploration.launch.py  navigation.launch.py 
src/maze_explorer/rviz/: simulation.rviz
src/maze_explorer/scripts/: astar_navigator.py  completion_led.py  position_identifier.py  start_end_detector.py
src/maze_explorer/src/:  waypoint_detector.cpp  encoder_publisher.cpp  mecanum_hardware_interface.cpp
src/maze_explorer/urdf/: maze_robot.urdf.xacro
(+70 files in other folders)
